[project]
name = "piboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mactmp>=0.0.9",
    "psutil>=7.0.0",
    "robyn>=0.65.0",
]

[project.scripts]
piboard = "piboard.__main__:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "types-psutil>=7.0.0.20250401",
]
