[project]
name = "piboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["robyn>=0.65.0"]

[project.scripts]
piboard = "piboard.__main__:main"

[tool.uv]
package = true

[dependency-groups]
dev = ["black>=25.1.0", "isort>=6.0.1", "mypy>=1.15.0"]
